# betamax

./: .gitignore  .travis.yml  AUTHORS.rst  CODE_OF_CONDUCT.rst  HISTORY.rst  MANIFEST.in  README.rst  dev-requirements.txt  requirements.txt  rtd-requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tox.yml
betamax/: __init__.py  adapter.py  cassette.py  configure.py  decorator.py  exceptions.py  matchers.py  mock_response.py  new_cassette.py  options.py  recorder.py  serializers.py  util.py  utils.py  vcr.py
betamax/cassette/: __init__.py  cassette.py  headers.py  interaction.py  mock_response.py  util.py
betamax/fixtures/: pytest.py  unittest.py  unittest2.py
betamax/matchers/: __init__.py  base.py  body.py  digest_auth.py  headers.py  query.py
betamax/serializers/: __init__.py  base.py  json_serializer.py  pickle_serializer.py  proxy.py
docs/: api.rst  cassettes.rst  conf.py  configuring.rst  implementation_details.rst  index.rst  integrations.rst  introduction.rst  long_term_usage.rst  matchers.rst  record_modes.rst  requirements.txt  serializers.rst  third_party_packages.rst  usage_patterns.rst
docs/source/: api.rst  conf.py  configuring.rst  implementation_details.rst  index.rst  integrations.rst  introduction.rst  long_term_usage.rst  matchers.rst  record_modes.rst  serializers.rst  third_party_packages.rst
examples/: more_complicated_cassettes.py  more_complicated_cassettes_2.py  more_complicated_cassettes_2.traceback  our_first_recorded_session.py
examples/cassettes/: more-complicated-cassettes.json  our-first-recorded-session.json
requests_vcr/: __init__.py  adapter.py  alt_matchers.py  cassette.py  exceptions.py  matchers.py  vcr.py
src/betamax/: __init__.py  adapter.py  configure.py  decorator.py  exceptions.py  headers.py  mock_response.py  (+3 more)
tests/: conftest.py  test_adapter.py  test_cassette.py  test_matchers.py  test_vcr.py
(+57 files in other folders)
