[metadata]
name = betamax
version = attr: betamax.__version__
description = A VCR imitation for python-requests
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/sigmavirus24/betamax
author = Ian Stapleton Cordasco
author_email = graffatcolmingov@gmail.com
license = Apache-2.0
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance

[options]
packages = find:
include_package_data = True
install_requires =
    requests >= 2.0
python_requires = >=3.8.1
package_dir =
    =src

[options.packages.find]
where = src
exclude =
    tests
    tests.integration

[options.package_data]
* = LICENSE AUTHORS.rst HISTORY.rst README.rst

[options.entry_points]
pytest11 =
    pytest-betamax = betamax.fixtures.pytest

[bdist_wheel]
universal = 1

[coverage:run]
source =
    betamax
    tests
plugins = covdefaults

#[coverage:report]
#fail_under = 70

#[mypy]
#check_untyped_defs = true
#disallow_any_generics = true
#disallow_incomplete_defs = true
#disallow_untyped_defs = true
#no_implicit_optional = true
#warn_unused_ignores = true
#
#[mypy-tests.*]
#disallow_untyped_defs = false
